laborations/lab1/test/bad/bad084.cc
int main () {
	for ((3%x) y; 1; 3) {}
}
